Move common parts of process functions to model_func

--- a/semimech/08trig-process.ipynb
+++ b/semimech/08trig-process.ipynb
@@ -27,18 +27,8 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
-    "# from emu_renewal.process import generate_piecewise_cosine\n",
+    "from emu_renewal.process import get_spline_values_over_model_time, get_interp_vals_over_model_time, get_interp_vals_over_model_time\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b85e83a-5933-4d41-8c75-e2083e4c1470",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Tuple"
    ]
   },
   {
@@ -48,6 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Tuple\n",
+    "\n",
     "def get_cos_points_link(\n",
     "    coords_a: Tuple[float], \n",
     "    coords_b: Tuple[float],\n",
@@ -141,9 +133,11 @@
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    \n",
-    "    func = generate_piecewise_cosine(np.linspace(0.0, n_times, len(process_req)), process_req)\n",
+    "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
     "    \n",
-    "    x_vals = np.array(np.array([float(i) for i in range(n_times)]))\n",
+    "    func = get_interp_vals_over_model_time(req_x_vals, process_req)\n",
+    "    \n",
+    "    x_vals = np.array([float(i) for i in range(n_times)])\n",
     "    process_vals = func(x_vals)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
@@ -201,7 +195,7 @@
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=1000)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=50)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
   },
