--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -27,46 +27,8 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
-    "from emu_renewal.process import get_spline_values_over_model_time, get_interp_vals_over_model_time, get_interp_vals_over_model_time\n",
+    "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9218cdd-2242-4f3b-a2c3-b44386eb1ff4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Tuple\n",
-    "\n",
-    "def get_cos_points_link(\n",
-    "    coords_a: Tuple[float], \n",
-    "    coords_b: Tuple[float],\n",
-    ") -> callable:\n",
-    "    if coords_a[0] == coords_b[0]:\n",
-    "        raise ValueError('Same x-value for both submitted coordinates')\n",
-    "    period_adj = np.pi / (coords_b[0] - coords_a[0])\n",
-    "    amplitude = coords_b[1] - coords_a[1]\n",
-    "    def cos_link(x):\n",
-    "        return (-np.cos((x - coords_a[0]) * period_adj) + 1.0) / 2.0 * amplitude + coords_a[1]\n",
-    "    return cos_link\n",
-    "\n",
-    "def generate_piecewise_cosine(x_vals, y_vals):\n",
-    "    coords = list(zip(x_vals, y_vals))\n",
-    "    def piecewise_cosine_func(x):\n",
-    "        start_cond = x < x_vals[0]\n",
-    "        mid_conds = [x_vals[i] <= x <= x_vals[i + 1] for i in range(len(coords) - 1)]\n",
-    "        end_cond = x > x_vals[-1]\n",
-    "        conds = [start_cond] + mid_conds + [end_cond]\n",
-    "\n",
-    "        start_func = lambda x: y_vals[0]\n",
-    "        mid_funcs = [get_cos_points_link(coords[i], coords[i + 1]) for i in range(len(coords) - 1)]\n",
-    "        end_func = lambda x: y_vals[-1]\n",
-    "        funcs = [start_func] + mid_funcs + [end_func]\n",
-    "        \n",
-    "        return np.piecewise(x, conds, funcs)\n",
-    "    return np.vectorize(piecewise_cosine_func)"
    ]
   },
   {
@@ -128,23 +90,19 @@
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
     "    \"\"\"The common features of the model.\n",
     "    Get the generation time distribution from the user request,\n",
-    "    linearly interpolate the non-mechanistic process,\n",
+    "    generate the non-mechanistic process,\n",
     "    exponentiate the result and run the renewal process.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    \n",
     "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "    \n",
-    "    func = get_interp_vals_over_model_time(req_x_vals, process_req)\n",
-    "    \n",
-    "    x_vals = np.array([float(i) for i in range(n_times)])\n",
-    "    process_vals = func(x_vals)\n",
+    "    func = get_piecewise_cosine(req_x_vals, process_req)\n",
+    "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
-    "    \"\"\"Additionally include the generation time parameters as parameters,\n",
+    "    \"\"\"Including the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
@@ -190,12 +148,12 @@
     "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0)\n",
     "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
-    "seed_param = ng.p.Scalar(init=np.log(10000.0), lower=np.log(5000.0), upper=np.log(20000.0))\n",
+    "seed_param = ng.p.Scalar(init=np.log(1e4), lower=np.log(5e3), upper=np.log(2e4))\n",
     "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=50)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=500)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
   },
@@ -233,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
