--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -34,19 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72625949-8624-409a-a666-3d43e7e7729c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_taper_func(end_time: float) -> callable:\n",
-    "    def taper_func(time):\n",
-    "        return max(1.0 - time / end_time, 0.0)\n",
-    "    return taper_func"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "882f4d94-4767-430b-8e75-b2a67df01bec",
    "metadata": {},
    "outputs": [],
@@ -67,12 +54,12 @@
     "    suscept[0] = pop - seed_peak\n",
     "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
     "    \n",
-    "    seed_func = get_taper_func(run_in)\n",
+    "    seed_func = get_piecewise_cosine([0.0, run_in], [seed_peak, 0.0])\n",
     "    \n",
     "    for t in range(1, n_times):\n",
     "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
     "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]\n",
-    "        seeding_component = seed_func(t) * seed_peak\n",
+    "        seeding_component = seed_func(t)\n",
     "        renewal_component = contribution_by_day.sum() * r_t[t]\n",
     "        incidence[t] = seeding_component + renewal_component\n",
     "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
