Update other notebooks to new module code

--- a/semimech/04optimise-against-model-data.ipynb
+++ b/semimech/04optimise-against-model-data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Test optimisation algorithms against results produced by model with known parameters\n",
-    "Using a similar approach to the preceding notebooks ($\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$),\n",
+    "Using a similar approach to the preceding notebooks ($i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$),\n",
     "test various optimisation algorithms using model-created outputs\n",
     "(so that we know the ideal parameters that the algorithm should be approaching).\n",
     "So that we can start using these various model components in more sophisticated ways,\n",
@@ -29,7 +29,7 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.process import get_interp_vals_over_model_time\n",
+    "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
     "from emu_renewal.renew import renew_basic\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
@@ -48,7 +48,9 @@
     "    exponentiate the result and run the renewal process.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
+    "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
+    "    func = get_linear_interp_func(req_x_vals, process_req)\n",
+    "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
     "    return model_result, process_vals_exp\n",
@@ -110,13 +112,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4d84825c-4a0f-43c2-9772-2ca5664abf3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
+    "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_gen_mean, test_gen_sd, population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c6b9ae51-c010-4d9b-9e04-5da164127b0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
     "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_gen_mean, test_gen_sd, population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
-    "model_result, process_vals = model_func(gen_time_mean, gen_time_sd, result.x, population, infectious_seed, n_times)\n",
+    "model_result, process_vals = model_func(test_gen_mean, test_gen_sd, result.x, population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
     "# plot_output_fit(test_vals, model_result, process_vals, n_times)"
    ]
