--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -43,7 +43,7 @@
     "from scipy.optimize import minimize\n",
     "\n",
     "from emu_renewal.distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
-    "from emu_renewal.process import get_interp_vals_over_model_time\n",
+    "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
     "from emu_renewal.renew import renew_trunc_gen\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
@@ -59,7 +59,9 @@
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
+    "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
+    "    func = get_linear_interp_func(req_x_vals, process_req)\n",
+    "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    model_result = renew_trunc_gen(gen_time_densities, process_vals_exp, pop, seed, n_times, gen_times_end)\n",
     "    return model_result, process_vals_exp\n",
@@ -137,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
