--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -26,45 +26,10 @@
     "from datetime import datetime\n",
     "import nevergrad as ng\n",
     "\n",
+    "from emu_renewal.renew import \n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "882f4d94-4767-430b-8e75-b2a67df01bec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def renew_taper_seed(\n",
-    "    gen_time_densities: np.array, \n",
-    "    process_vals: np.array, \n",
-    "    pop: float, \n",
-    "    seed_peak: float, \n",
-    "    n_times: int,\n",
-    "    run_in: int,\n",
-    ") -> Outputs:\n",
-    "    incidence = np.zeros(n_times)\n",
-    "    suscept = np.zeros(n_times)\n",
-    "    r_t = np.zeros(n_times)\n",
-    "    \n",
-    "    incidence[0] = seed_peak\n",
-    "    suscept[0] = pop - seed_peak\n",
-    "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
-    "    \n",
-    "    seed_func = get_piecewise_cosine([0.0, run_in], [seed_peak, 0.0])\n",
-    "    \n",
-    "    for t in range(1, n_times):\n",
-    "        r_t[t] = process_vals[t] * suscept[t - 1] / pop\n",
-    "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]\n",
-    "        seeding_component = seed_func(t)\n",
-    "        renewal_component = contribution_by_day.sum() * r_t[t]\n",
-    "        incidence[t] = seeding_component + renewal_component\n",
-    "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)\n",
-    "        \n",
-    "    return Outputs(incidence, suscept, r_t)"
    ]
   },
   {
