Extend to-do list

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -10,7 +10,9 @@
     "Possible next steps:\n",
     "- Make the random walk actually a walk\n",
     "- Distinguish infection time from symptom onset time\n",
-    "- Allow for time step other than one (possibly)"
+    "- Allow for time step other than one\n",
+    "- Bayesian calibration\n",
+    "- Documentation with markdown"
    ]
   },
   {
@@ -26,7 +28,7 @@
     "from datetime import datetime\n",
     "import nevergrad as ng\n",
     "\n",
-    "from emu_renewal.renew import \n",
+    "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
     "from emu_renewal.outputs import Outputs, plot_output_fit"
@@ -105,7 +107,7 @@
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=500)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=5000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
   },
