Revise comment text in notebook 06

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Attempt fitting model to empiric data\n",
-    "Fit models to actually fit to real-world data.\n",
+    "Fit models to real-world data.\n",
     "Possible next steps:\n",
     "- Make the random walk actually a walk\n",
     "- Distinguish infection time from symptom onset time\n",
