Basic notebook creating quarto PDF

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "c25d2911-9339-408a-94bc-9ed67d1ab905",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Fitting renewal model to data\"\n",
+    "format: \n",
+    "  pdf\n",
+    "execute:\n",
+    "  echo: false\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
@@ -8,11 +23,12 @@
     "### Attempt fitting model to empiric data\n",
     "Fit models to real-world data.\n",
     "Possible next steps:\n",
-    "- Make the random walk actually a walk\n",
-    "- Distinguish infection time from symptom onset time\n",
-    "- Allow for time step other than one\n",
-    "- Bayesian calibration\n",
-    "- Documentation with markdown"
+    "\n",
+    "* Make the random walk actually a walk\n",
+    "* Distinguish infection time from symptom onset time\n",
+    "* Allow for time step other than one\n",
+    "* Bayesian calibration\n",
+    "* Documentation with markdown"
    ]
   },
   {
@@ -22,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
     "from typing import List\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -31,7 +48,9 @@
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
-    "from emu_renewal.outputs import Outputs, plot_output_fit"
+    "from emu_renewal.outputs import Outputs, plot_output_fit\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -118,13 +137,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reporting\n",
+    "#| label: fit\n",
+    "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
     "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
-    "print(f'generation time mean: {ngopt_result[0]}')\n",
-    "print(f'generation time sd: {ngopt_result[1]}')\n",
-    "print(f'cdr: {ngopt_result[2]}')\n",
-    "print(f'seed: {ngopt_result[3]}')\n",
-    "print('random process vals: ' + ', '.join([str(np.exp(i)) for i in ngopt_result[-1]]))\n",
+    "# print(f'generation time mean: {ngopt_result[0]}')\n",
+    "# print(f'generation time sd: {ngopt_result[1]}')\n",
+    "# print(f'cdr: {ngopt_result[2]}')\n",
+    "# print(f'seed: {ngopt_result[3]}')\n",
+    "# print('random process vals: ' + ', '.join([str(np.exp(i)) for i in ngopt_result[-1]]))\n",
     "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
    ]
   }
