--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -48,9 +48,7 @@
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
-    "from emu_renewal.outputs import Outputs, plot_output_fit\n",
-    "\n",
-    "warnings.filterwarnings('ignore')"
+    "from emu_renewal.outputs import Outputs, plot_output_fit"
    ]
   },
   {
@@ -117,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimisation\n",
+    "#| warning: false\n",
     "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0)\n",
     "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0)\n",
     "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
