Basic documentation processes in place

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -69,8 +69,9 @@
     "    func = get_piecewise_cosine(req_x_vals, process_req)\n",
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return model_result, process_vals_exp\n",
+    "    model_result, renew_description = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
+    "    description = renew_description + ' Some more explanation of the model.'\n",
+    "    return model_result, process_vals_exp, description\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    \"\"\"Including the generation time parameters as parameters,\n",
@@ -124,7 +125,7 @@
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=5000)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=100)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
   },
@@ -137,13 +138,19 @@
    "source": [
     "#| label: fit\n",
     "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
-    "# print(f'generation time mean: {ngopt_result[0]}')\n",
-    "# print(f'generation time sd: {ngopt_result[1]}')\n",
-    "# print(f'cdr: {ngopt_result[2]}')\n",
-    "# print(f'seed: {ngopt_result[3]}')\n",
-    "# print('random process vals: ' + ', '.join([str(np.exp(i)) for i in ngopt_result[-1]]))\n",
+    "ngopt_output, ngopt_process, description = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
     "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "219c96c5-f99c-47b7-9d8e-cb8c69d0c25a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown\n",
+    "Markdown(description)"
    ]
   }
  ],
@@ -163,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
