Get all basic functionality into 06 notebook for PDF compilation

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -12,6 +12,7 @@
     "execute:\n",
     "  echo: false\n",
     "jupyter: python3\n",
+    "bibliography: austcovid.bib\n",
     "---"
    ]
   },
@@ -21,7 +22,7 @@
    "metadata": {},
    "source": [
     "### Attempt fitting model to empiric data\n",
-    "Fit models to real-world data.\n",
+    "Fit models to real-world data [@altarawneh2022b], as shown in @fig-fit.\n",
     "Possible next steps:\n",
     "\n",
     "* Make the random walk actually a walk\n",
@@ -44,6 +45,7 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import nevergrad as ng\n",
+    "from IPython.display import Markdown\n",
     "\n",
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
@@ -136,10 +138,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| label: fit\n",
+    "#| label: fig-fit\n",
     "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
     "ngopt_output, ngopt_process, description = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
-    "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])"
+    "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2]).show()"
    ]
   },
   {
@@ -149,7 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Markdown\n",
     "Markdown(description)"
    ]
   }
