--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Fitting renewal model to data\"\n",
+    "title: \"Renewal model fitting\"\n",
     "format: \n",
     "  pdf\n",
     "execute:\n",
     "  echo: false\n",
     "jupyter: python3\n",
     "bibliography: austcovid.bib\n",
+    "csl: https://www.zotero.org/styles/the-lancet\n",
     "---"
    ]
   },
@@ -22,14 +23,7 @@
    "metadata": {},
    "source": [
     "### Attempt fitting model to empiric data\n",
-    "Fit models to real-world data [@altarawneh2022b], as shown in @fig-fit.\n",
-    "Possible next steps:\n",
-    "\n",
-    "* Make the random walk actually a walk\n",
-    "* Distinguish infection time from symptom onset time\n",
-    "* Allow for time step other than one\n",
-    "* Bayesian calibration\n",
-    "* Documentation with markdown"
+    "Fit models to real-world data [@altarawneh2022b], as shown in @fig-fit."
    ]
   },
   {
@@ -46,11 +40,12 @@
     "from datetime import datetime\n",
     "import nevergrad as ng\n",
     "from IPython.display import Markdown\n",
+    "from collections import namedtuple\n",
     "\n",
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
-    "from emu_renewal.outputs import Outputs, plot_output_fit"
+    "from emu_renewal.outputs import plot_output_fit"
    ]
   },
   {
@@ -71,8 +66,8 @@
     "    func = get_piecewise_cosine(req_x_vals, process_req)\n",
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result, renew_description = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    description = renew_description + ' Some more explanation of the model.'\n",
+    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
+    "    description = model_result.description + ' Some more explanation of the model.'\n",
     "    return model_result, process_vals_exp, description\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
@@ -141,7 +136,17 @@
     "#| label: fig-fit\n",
     "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
     "ngopt_output, ngopt_process, description = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
-    "plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2]).show()"
+    "fig = plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e1778cf-dcb5-4e6d-8ebb-b6e6fff5a940",
+   "metadata": {},
+   "source": [
+    "## Methods\n",
+    "### Renewal process"
    ]
   },
   {
