Add comments through model function

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -12,7 +12,7 @@
     "execute:\n",
     "  echo: false\n",
     "jupyter: python3\n",
-    "bibliography: austcovid.bib\n",
+    "bibliography: renew.bib\n",
     "csl: https://www.zotero.org/styles/the-lancet\n",
     "---"
    ]
@@ -22,8 +22,8 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "### Attempt fitting model to empiric data\n",
-    "Fit models to real-world data [@altarawneh2022b], as shown in @fig-fit."
+    "## Results\n",
+    "Fit models to real-world data, as shown in @fig-fit."
    ]
   },
   {
@@ -51,6 +51,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3401b9e3-d1cb-4d01-95de-05dd2fee4ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ModelResult = namedtuple('results', ['outputs', 'process', 'description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
    "metadata": {},
    "outputs": [],
@@ -62,20 +72,30 @@
     "    exponentiate the result and run the renewal process.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
+    "    curve_fit = 'A continuous function of time was constructed from ' \\\n",
+    "        'the non-mechanistic process series values submitted to the model. ' \\\n",
+    "        'The fitting function consisted of a piecewise function ' \\\n",
+    "        'constructed from a cosine function on domain zero to \\pi. ' \\\n",
+    "        'This function was then translated and scaled vertically and horizontally ' \\\n",
+    "        'such that the starting and ending points of the cosine function ' \\\n",
+    "        '(at which the gradient is zero) pass through the two consecutive ' \\\n",
+    "        'process values. This provides a function of time for which ' \\\n",
+    "        'the gradient and all higher order gradients are continuous. ' \\\n",
+    "        'The time values corresponding to the submitted process values ' \\\n",
+    "        'are set to be evenly spaced throughout the simulation period. '\n",
     "    req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
     "    func = get_piecewise_cosine(req_x_vals, process_req)\n",
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    description = model_result.description + ' Some more explanation of the model.'\n",
-    "    return model_result, process_vals_exp, description\n",
+    "    renewal_output = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
+    "    return ModelResult(renewal_output, process_vals_exp, curve_fit + renewal_output.description)\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    \"\"\"Including the generation time parameters as parameters,\n",
     "    least squares loss function.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in)[0][0]\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in).outputs.incidence\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])"
    ]
   },
@@ -135,8 +155,9 @@
    "source": [
     "#| label: fig-fit\n",
     "#| fig-cap: \"Optimisation to sample data from Malaysia\"\n",
-    "ngopt_output, ngopt_process, description = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
-    "fig = plot_output_fit(mys_data, ngopt_output, ngopt_process, n_times, cdr=ngopt_result[2])\n",
+    "model_result = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
+    "renewal_desc = model_result.description\n",
+    "fig = plot_output_fit(mys_data, model_result.outputs, model_result.process, n_times, cdr=ngopt_result[2])\n",
     "fig.show()"
    ]
   },
@@ -156,7 +177,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(description)"
+    "Markdown(renewal_desc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d61b1dc6-ad07-4bd1-a036-70abea56a1c9",
+   "metadata": {},
+   "source": [
+    "## References"
    ]
   }
  ],
