Complete some basics of the base document

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -66,16 +66,24 @@
    "outputs": [],
    "source": [
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
-    "    \"\"\"The common features of the model.\n",
-    "    Get the generation time distribution from the user request,\n",
-    "    generate the non-mechanistic process,\n",
-    "    exponentiate the result and run the renewal process.\n",
-    "    \"\"\"\n",
+    "    gen_desc = '\\n### Generation times.\\n' \\\n",
+    "        'Generation times for each day are calculated by ' \\\n",
+    "        'first finding the parameters needed to construct ' \\\n",
+    "        'a gamma distribution with mean and standard deviation ' \\\n",
+    "        'equal to those specified by the submitted parameter values. ' \\\n",
+    "        'The integrals of the probability density of this distribution ' \\\n",
+    "        'between consecutive integer values are then calculated for ' \\\n",
+    "        'later combination with the incidence time series. '\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    curve_fit = 'A continuous function of time was constructed from ' \\\n",
+    "    curve_desc = '\\n\\n### Non-mechanistic process.\\n\\n' \\\n",
+    "        'The sequence of parameter values pertaining to ' \\\n",
+    "        \"the model's non-mechanistic process are first exponentiated, \" \\\n",
+    "        'such that parameter exploration for these quantities is ' \\\n",
+    "        'undertaken in the log-transformed space. ' \\\n",
+    "        'Next, a continuous function of time was constructed from ' \\\n",
     "        'the non-mechanistic process series values submitted to the model. ' \\\n",
     "        'The fitting function consisted of a piecewise function ' \\\n",
-    "        'constructed from a cosine function on domain zero to \\pi. ' \\\n",
+    "        'constructed from a cosine function on domain zero to $\\pi$. ' \\\n",
     "        'This function was then translated and scaled vertically and horizontally ' \\\n",
     "        'such that the starting and ending points of the cosine function ' \\\n",
     "        '(at which the gradient is zero) pass through the two consecutive ' \\\n",
@@ -88,7 +96,7 @@
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    renewal_output = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, curve_fit + renewal_output.description)\n",
+    "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    \"\"\"Including the generation time parameters as parameters,\n",
@@ -166,8 +174,7 @@
    "id": "3e1778cf-dcb5-4e6d-8ebb-b6e6fff5a940",
    "metadata": {},
    "source": [
-    "## Methods\n",
-    "### Renewal process"
+    "## Methods"
    ]
   },
   {
