--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -45,7 +45,8 @@
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
-    "from emu_renewal.outputs import plot_output_fit"
+    "from emu_renewal.outputs import plot_output_fit\n",
+    "from emu_renewal.markdown import get_param_table_from_instrum"
    ]
   },
   {
@@ -66,7 +67,7 @@
    "outputs": [],
    "source": [
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, run_in: int) -> tuple:\n",
-    "    gen_desc = '\\n### Generation times.\\n' \\\n",
+    "    gen_desc = '\\n\\n### Generation times\\n' \\\n",
     "        'Generation times for each day are calculated by ' \\\n",
     "        'first finding the parameters needed to construct ' \\\n",
     "        'a gamma distribution with mean and standard deviation ' \\\n",
@@ -75,7 +76,7 @@
     "        'between consecutive integer values are then calculated for ' \\\n",
     "        'later combination with the incidence time series. '\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    curve_desc = '\\n\\n### Non-mechanistic process.\\n\\n' \\\n",
+    "    curve_desc = '\\n\\n### Non-mechanistic process\\n' \\\n",
     "        'The sequence of parameter values pertaining to ' \\\n",
     "        \"the model's non-mechanistic process are first exponentiated, \" \\\n",
     "        'such that parameter exploration for these quantities is ' \\\n",
@@ -97,14 +98,7 @@
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    renewal_output = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
     "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)\n",
-    "\n",
-    "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
-    "    \"\"\"Including the generation time parameters as parameters,\n",
-    "    least squares loss function.\n",
-    "    \"\"\"\n",
-    "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in).outputs.incidence\n",
-    "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])"
+    "\n"
    ]
   },
   {
@@ -142,11 +136,21 @@
    "outputs": [],
    "source": [
     "#| warning: false\n",
-    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0)\n",
-    "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0)\n",
-    "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2)\n",
-    "seed_param = ng.p.Scalar(init=np.log(1e4), lower=np.log(5e3), upper=np.log(2e4))\n",
-    "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0)\n",
+    "calib_desc = '\\n\\n### Calibration targets\\nThe model described above was fit to the target data ' \\\n",
+    "    'to minimise the square of the difference between the modelled notification rate ' \\\n",
+    "    'and the reported case numbers at each date considered. ' \\\n",
+    "    'Modelled notifications is calculated as the product of modelled incidence and the ' \\\n",
+    "    '(constant through time) case detection proportion. '\n",
+    "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
+    "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in).outputs.incidence\n",
+    "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
+    "\n",
+    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0).set_name('Generation time mean (days)')\n",
+    "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0).set_name('Generation time standard deviation (days)')\n",
+    "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2).set_name('Case detection proportion')\n",
+    "seed_param = ng.p.Scalar(init=np.log(1e4), lower=np.log(5e3), upper=np.log(2e4)).set_name('Log starting seed rate')\n",
+    "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0).set_name('Log non-mechanistic process values')\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
@@ -188,6 +192,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f54cc6-1562-4687-936d-df1135a99170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(calib_desc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7071dd18-4faa-4540-9e1b-9dabd2508855",
+   "metadata": {},
+   "source": [
+    "### Calibrated parameters\n",
+    "The parameters used in the optimisation presented here are presented in @tbl-params."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "312d0e42-5c04-4331-8b9a-83515690b097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib_params = get_param_table_from_instrum(instrum)\n",
+    "Markdown(calib_params.to_markdown() + '\\n : Parameters table {#tbl-params}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d61b1dc6-ad07-4bd1-a036-70abea56a1c9",
    "metadata": {},
@@ -212,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
