Almost feature complete documentation draft

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -170,7 +170,15 @@
     "model_result = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[4], 33e6, ngopt_result[3], n_times, run_in)\n",
     "renewal_desc = model_result.description\n",
     "fig = plot_output_fit(mys_data, model_result.outputs, model_result.process, n_times, cdr=ngopt_result[2])\n",
-    "fig.show()"
+    "fig.write_image('results_fig.svg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8255a61-79dc-4733-a3dc-158d54caae96",
+   "metadata": {},
+   "source": [
+    "![Figure text](results_fig.svg){#fig-fit}"
    ]
   },
   {
@@ -217,8 +225,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib_params = get_param_table_from_instrum(instrum)\n",
+    "calib_params = get_param_table_from_instrum(instrum) \n",
     "Markdown(calib_params.to_markdown() + '\\n : Parameters table {#tbl-params}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82604d99-9fc1-4aa8-b785-fca60e8c2258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evidence_table = pd.DataFrame(index=calib_params.index, columns=['Evidence'])\n",
+    "evidence_table.loc[:, 'Evidence'] = 'To be populated [@cori2013]'\n",
+    "Markdown(evidence_table.to_markdown())"
    ]
   },
   {
@@ -246,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
