Fix up some last formatting and other details for feature-complete PDF

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -178,7 +178,7 @@
    "id": "f8255a61-79dc-4733-a3dc-158d54caae96",
    "metadata": {},
    "source": [
-    "![Figure text](results_fig.svg){#fig-fit}"
+    "![Results of fitting to data from Malaysia.](results_fig.svg){#fig-fit}"
    ]
   },
   {
