Add explanation of fixed parameters to calibration notebook

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -117,6 +117,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5a2cc112-91bb-4878-b68f-5f4e96192d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_param_desc = '### Fixed parameter values\\n ' \\\n",
+    "    f'The target population is initialised as {str(int(population))} susceptible persons. ' \\\n",
+    "    f'The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "209cb833-ab7d-41b5-ac33-da70c5eb56d0",
    "metadata": {},
    "outputs": [],
@@ -187,6 +199,16 @@
    "metadata": {},
    "source": [
     "## Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebc01c20-73ba-4d64-aad9-88cc5aee8797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(fixed_param_desc)"
    ]
   },
   {
