New parameter structure, but not working

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -97,8 +97,7 @@
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    renewal_output = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)\n",
-    "\n"
+    "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)"
    ]
   },
   {
@@ -143,6 +142,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3477915d-d5db-485f-afa8-1e4cbfd6a2cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib_params = {\n",
+    "    'Generation time mean (days)' : {'init': 5.0, 'lower': 0.1, 'upper': 14.0},\n",
+    "    'Generation time standard deviation (days)': {'init': 5.0, 'lower': 2.5, 'upper': 8.0},\n",
+    "    'Case detection proportion': {'init': 0.06, 'lower': 0.04, 'upper': 0.2},\n",
+    "    'Log starting seed rate': {'init': np.log(1e4), 'lower': np.log(5e3), 'upper': np.log(2e4)},\n",
+    "}\n",
+    "calib_params_df = pd.DataFrame(calib_params).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc7458b1-8c73-4e6d-9358-b9d056276fa0",
    "metadata": {},
    "outputs": [],
@@ -154,18 +169,16 @@
     "    'Modelled notifications is calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
-    "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
+    "    *process_req, gen_time_mean, gen_time_sd, cdr, seed = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in).outputs.incidence\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
     "\n",
-    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0).set_name('Generation time mean (days)')\n",
-    "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0).set_name('Generation time standard deviation (days)')\n",
-    "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2).set_name('Case detection proportion')\n",
-    "seed_param = ng.p.Scalar(init=np.log(1e4), lower=np.log(5e3), upper=np.log(2e4)).set_name('Log starting seed rate')\n",
     "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0).set_name('Log non-mechanistic process values')\n",
-    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
-    "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
+    "scalar_params_list = [ng.p.Scalar(**row).set_name(idx) for idx, row in calib_params_df.iterrows()]\n",
+    "instrum = ng.p.Instrumentation(process_param, *scalar_params_list)\n",
+    "\n",
+    "def obj_func(proc_params, *scalar_params_list):\n",
+    "    return calib_func([proc_params] + scalar_params_list, pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=100)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
@@ -248,7 +261,7 @@
    "outputs": [],
    "source": [
     "calib_params = get_param_table_from_instrum(instrum) \n",
-    "Markdown(calib_params.to_markdown() + '\\n : Parameters table {#tbl-params}')"
+    "Markdown(calib_params.to_markdown() + '\\n : Calibrated parameters {#tbl-params}')"
    ]
   },
   {
