--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -143,6 +143,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32799d2c-7186-47d2-81e4-1a402989961d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define scalar parameter ranges here\n",
+    "calib_params = {\n",
+    "    'Generation time mean (days)' : {'init': 5.0, 'lower': 0.1, 'upper': 14.0},\n",
+    "    'Generation time standard deviation (days)': {'init': 5.0, 'lower': 2.5, 'upper': 8.0},\n",
+    "    'Case detection proportion': {'init': 0.06, 'lower': 0.04, 'upper': 0.2},\n",
+    "    'Log starting seed rate': {'init': np.log(1e4), 'lower': np.log(5e3), 'upper': np.log(2e4)},\n",
+    "}\n",
+    "calib_params_df = pd.DataFrame(calib_params).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bc7458b1-8c73-4e6d-9358-b9d056276fa0",
    "metadata": {},
    "outputs": [],
@@ -158,14 +175,13 @@
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in).outputs.incidence\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
     "\n",
-    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=14.0).set_name('Generation time mean (days)')\n",
-    "gen_time_sd_param = ng.p.Scalar(init=5.0, lower=2.5, upper=8.0).set_name('Generation time standard deviation (days)')\n",
-    "cdr_param = ng.p.Scalar(init=0.06, lower=0.04, upper=0.2).set_name('Case detection proportion')\n",
-    "seed_param = ng.p.Scalar(init=np.log(1e4), lower=np.log(5e3), upper=np.log(2e4)).set_name('Log starting seed rate')\n",
-    "process_param = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0).set_name('Log non-mechanistic process values')\n",
-    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, cdr_param, seed_param, process_param)\n",
-    "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(parameters), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
+    "scalar_params = [ng.p.Scalar(**row).set_name(idx) for idx, row in calib_params_df.iterrows()]\n",
+    "process_params = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0).set_name('Log non-mechanistic process values')\n",
+    "instrum = ng.p.Instrumentation(*scalar_params, process_params)\n",
+    "\n",
+    "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, proc_params):\n",
+    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(proc_params), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
+    "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=100)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
@@ -247,8 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib_params = get_param_table_from_instrum(instrum) \n",
-    "Markdown(calib_params.to_markdown() + '\\n : Parameters table {#tbl-params}')"
+    "calib_params_df.columns = ['Starting point', 'Lower limit', 'Upper limit']\n",
+    "Markdown(calib_params_df.to_markdown() + '\\n : Scalar calibration parameters table {#tbl-params}')"
    ]
   },
   {
