Perhaps marginally more terse code

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -97,33 +97,7 @@
     "    process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
     "    renewal_output = renew_taper_seed(gen_time_densities, process_vals_exp, pop, np.exp(seed), n_times, run_in)\n",
-    "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fixed parameters\n",
-    "population = 33e6\n",
-    "run_in = 30\n",
-    "n_process_periods = 12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2cc112-91bb-4878-b68f-5f4e96192d0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fixed_param_desc = '### Fixed parameter values\\n ' \\\n",
-    "    f'The target population is initialised as {str(int(population))} susceptible persons. ' \\\n",
-    "    f'The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n'"
+    "    return ModelResult(renewal_output, process_vals_exp, gen_desc + curve_desc + renewal_output.description)"
    ]
   },
   {
@@ -138,6 +112,31 @@
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
     "mys_data.index += run_in\n",
     "n_times = len(mys_data) + run_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixed parameters\n",
+    "run_in = 30\n",
+    "n_process_periods = 12\n",
+    "calib_kwargs = {'pop': 33e6, 'n_times': n_times, 'run_in': run_in, 'targets': mys_data}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2cc112-91bb-4878-b68f-5f4e96192d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_param_desc = '### Fixed parameter values\\n ' \\\n",
+    "    f'The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. ' \\\n",
+    "    f'The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n'"
    ]
   },
   {
@@ -168,7 +167,7 @@
     "calib_desc = '\\n\\n### Calibration targets\\nThe model described above was fit to the target data ' \\\n",
     "    'to minimise the square of the difference between the modelled notification rate ' \\\n",
     "    'and the reported case numbers at each date considered. ' \\\n",
-    "    'Modelled notifications is calculated as the product of modelled incidence and the ' \\\n",
+    "    'Modelled notifications are calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
     "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
@@ -180,7 +179,7 @@
     "instrum = ng.p.Instrumentation(*scalar_params, process_params)\n",
     "\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, proc_params):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(proc_params), pop=population, n_times=n_times, run_in=run_in, targets=mys_data)\n",
+    "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(proc_params), **calib_kwargs)\n",
     "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=100)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
@@ -274,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evidence_table = pd.DataFrame(index=calib_params.index, columns=['Evidence'])\n",
+    "evidence_table = pd.DataFrame(index=calib_params_df.index, columns=['Evidence'])\n",
     "evidence_table.loc[:, 'Evidence'] = 'To be populated [@cori2013]'\n",
     "Markdown(evidence_table.to_markdown())"
    ]
