--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -107,35 +107,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data and fixed parameters\n",
+    "run_in = 30\n",
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
     "mys_data.index += run_in\n",
-    "n_times = len(mys_data) + run_in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fixed parameters\n",
-    "run_in = 30\n",
+    "n_times = len(mys_data) + run_in\n",
     "n_process_periods = 12\n",
-    "calib_kwargs = {'pop': 33e6, 'n_times': n_times, 'run_in': run_in, 'targets': mys_data}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2cc112-91bb-4878-b68f-5f4e96192d0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "calib_kwargs = {'pop': 33e6, 'n_times': n_times, 'run_in': run_in, 'targets': mys_data}\n",
     "fixed_param_desc = '### Fixed parameter values\\n ' \\\n",
-    "    f'The target population is initialised as {str(int(calib_kwargs['pop']))} susceptible persons. ' \\\n",
+    "    f'The target population is initialised as {str(int(calib_kwargs[\"pop\"]))} susceptible persons. ' \\\n",
     "    f'The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n'"
    ]
   },
@@ -146,14 +128,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define scalar parameter ranges here\n",
-    "calib_params = {\n",
+    "# Define parameter ranges\n",
+    "scalar_req = {\n",
     "    'Generation time mean (days)' : {'init': 5.0, 'lower': 0.1, 'upper': 14.0},\n",
     "    'Generation time standard deviation (days)': {'init': 5.0, 'lower': 2.5, 'upper': 8.0},\n",
     "    'Case detection proportion': {'init': 0.06, 'lower': 0.04, 'upper': 0.2},\n",
     "    'Log starting seed rate': {'init': np.log(1e4), 'lower': np.log(5e3), 'upper': np.log(2e4)},\n",
     "}\n",
-    "calib_params_df = pd.DataFrame(calib_params).transpose()"
+    "params_df = pd.DataFrame(scalar_req).transpose()\n",
+    "proc_req = {'init': 0.0, 'lower': -2.0, 'upper': 2.0}"
    ]
   },
   {
@@ -170,17 +153,16 @@
     "    'Modelled notifications are calculated as the product of modelled incidence and the ' \\\n",
     "    '(constant through time) case detection proportion. '\n",
     "def calib_func(parameters: List[float], pop: int, n_times: int, run_in: int, targets: dict) -> float:\n",
-    "    gen_time_mean, gen_time_sd, cdr, seed, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, run_in).outputs.incidence\n",
+    "    gen_time_mean, gen_time_sd, cdr, seed, *process = parameters\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process, pop, seed, n_times, run_in).outputs.incidence\n",
     "    return sum([(incidence[t] * cdr - d) ** 2 for t, d in targets.items()])\n",
-    "\n",
-    "scalar_params = [ng.p.Scalar(**row).set_name(idx) for idx, row in calib_params_df.iterrows()]\n",
-    "process_params = ng.p.Array(init=[0.0] * n_process_periods, lower=-2.0, upper=2.0).set_name('Log non-mechanistic process values')\n",
-    "instrum = ng.p.Instrumentation(*scalar_params, process_params)\n",
     "\n",
     "def obj_func(gen_time_mean, gen_time_sd, cdr_param, seed, proc_params):\n",
     "    return calib_func([gen_time_mean, gen_time_sd, cdr_param, seed] + list(proc_params), **calib_kwargs)\n",
     "\n",
+    "scalar_params = [ng.p.Scalar(**row).set_name(idx) for idx, row in params_df.iterrows()]\n",
+    "process_params = ng.p.Array(init=[proc_req['init']] * n_process_periods, lower=proc_req['lower'], upper=proc_req['upper']).set_name('Log non-mechanistic process values')\n",
+    "instrum = ng.p.Instrumentation(*scalar_params, process_params)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=100)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]"
    ]
@@ -262,8 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib_params_df.columns = ['Starting point', 'Lower limit', 'Upper limit']\n",
-    "Markdown(calib_params_df.to_markdown() + '\\n : Scalar calibration parameters table {#tbl-params}')"
+    "params_df.loc['Log non-mechanistic process values'] = proc_req\n",
+    "params_df.columns = ['Starting point', 'Lower limit', 'Upper limit']\n",
+    "Markdown(params_df.to_markdown() + '\\n : Calibration parameters table {#tbl-params}')"
    ]
   },
   {
@@ -273,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evidence_table = pd.DataFrame(index=calib_params_df.index, columns=['Evidence'])\n",
+    "evidence_table = pd.DataFrame(index=params_df.index, columns=['Evidence'])\n",
     "evidence_table.loc[:, 'Evidence'] = 'To be populated [@cori2013]'\n",
     "Markdown(evidence_table.to_markdown())"
    ]
