Remove unneeded function

--- a/renew/06apply-to-data.ipynb
+++ b/renew/06apply-to-data.ipynb
@@ -45,8 +45,7 @@
     "from emu_renewal.renew import renew_taper_seed\n",
     "from emu_renewal.distributions import get_gamma_densities_from_params\n",
     "from emu_renewal.process import get_spline_interp_func, get_linear_interp_func, get_piecewise_cosine\n",
-    "from emu_renewal.outputs import plot_output_fit\n",
-    "from emu_renewal.markdown import get_param_table_from_instrum"
+    "from emu_renewal.outputs import plot_output_fit"
    ]
   },
   {
